--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -45,7 +45,6 @@ jobs:
           run: az bicep build ./src/deploy/bicep/network/deploy.bicep
         - name: Validate DevCenter Bicep Templates
           run: az bicep build ./src/deploy/bicep/devBox/deploy.bicep
-      needs: [Deploy-DevBox-As-A-Service-For-eShop]
 
     Deploy-DevBox-As-A-Service-For-eShop:
         runs-on: ubuntu-latest
@@ -78,3 +77,5 @@ jobs:
               resourceGroupName: ${{ env.networkResourceGroupName }}
               template: ./src/deploy/bicep/network/deploy.bicep
               parameters: 'vnetName=${{ env.vnetName }} subnetName=${{ env.subNetName }} networkConnectionName=${{ env.networkConnectionName }} logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }} managementResourceGroupName=${{ env.managementResourceGroupName }}'
+        needs: 
+          - Validate-and-Build-Bicep-Templates
