Fixing DevCEnter Bicep Bugs

--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -35,6 +35,10 @@ jobs:
     Validate-and-Build-Bicep-Templates:
       runs-on: ubuntu-latest
       steps:
+        - name: Update Packages
+          run: |
+            sudo apt-get update && \
+            sudo apt-get upgrade -y 
         - name: Checkout repository
           uses: actions/checkout@v3
         - name: Bicep Upgrade
@@ -50,6 +54,10 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+          - name: Update Packages
+            run: |
+              sudo apt-get update && \
+              sudo apt-get upgrade -y 
           - name: Checkout repository
             uses: actions/checkout@v3
           - name: Log in to Azure
