--- a/.github/workflows/depoyDevBox-CI.yaml
+++ b/.github/workflows/depoyDevBox-CI.yaml
@@ -47,13 +47,13 @@ jobs:
           run: az bicep upgrade
 
         - name: Validate Management Bicep Templates
-          run: az bicep build --file ./src/deploy/bicep/management/deploy.bicep --out-file ./artifactsBicep/management.json
+          run: az bicep build --file ./src/deploy/bicep/management/deploy.bicep --outdir ./artifactsBicep/
 
         - name: Validate Network Bicep Templates
-          run: az bicep build --file ./src/deploy/bicep/network/deploy.bicep --out-file ./artifactsBicep/network.json
+          run: az bicep build --file ./src/deploy/bicep/network/deploy.bicep --outdir ./artifactsBicep/
 
         - name: Validate DevCenter Bicep Templates
-          run: az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --out-file ./artifactsBicep/devBox.json
+          run: az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outdir ./artifactsBicep/
 
         - name: artifacts
           uses: actions/upload-artifact@v3
