--- a/.github/workflows/depoyDevBox-CI.yaml
+++ b/.github/workflows/depoyDevBox-CI.yaml
@@ -47,13 +47,13 @@ jobs:
           run: az bicep upgrade
 
         - name: Validate Management Bicep Templates
-          run: az bicep build --file ./src/deploy/bicep/management/deploy.bicep --outdir ./artifactsBicep/
+          run: az bicep build --file ./src/deploy/bicep/management/deploy.bicep --outfile ./artifactsBicep/deployManagement.json
 
         - name: Validate Network Bicep Templates
-          run: az bicep build --file ./src/deploy/bicep/network/deploy.bicep --outdir ./artifactsBicep/
+          run: az bicep build --file ./src/deploy/bicep/network/deploy.bicep --outfile ./artifactsBicep/deployNetwork.json
 
         - name: Validate DevCenter Bicep Templates
-          run: az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outdir ./artifactsBicep/
+          run: az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outfile ./artifactsBicep/deployDevBox.json
 
         - name: artifacts
           uses: actions/upload-artifact@v3
