--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -87,12 +87,7 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_CREDENTIALS.subscriptionId}}
           resourceGroupName: ${{ env.networkResourceGroupName }}
           template: ./src/deploy/bicep/network/deploy.bicep
-          parameters: |
-            'vnetName=${{ env.vnetName }}  
-             subnetName=${{ env.subNetName }}  
-             networkConnectionName=${{ env.networkConnectionName }}  
-             logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }}  
-             managementResourceGroupName=${{ env.managementResourceGroupName }} ' 
+          parameters: 'vnetName=${{ env.vnetName }} subnetName=${{ env.subNetName }} networkConnectionName=${{ env.networkConnectionName }} logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }} managementResourceGroupName=${{ env.managementResourceGroupName }}' 
 
       - name: Deploy DevCenter Resources
         uses: azure/arm-deploy@v1
@@ -100,13 +95,4 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_CREDENTIALS.subscriptionId}}
           resourceGroupName: ${{ env.devBoxResourceGroupName }}
           template: ./src/deploy/bicep/devBox/deploy.bicep
-          parameters: |
-            devCenterName=${{ env.devCenterName }} 
-            networkConnectionName=${{ env.networkConnectionName }} 
-            identityName=${{ env.identityName }} 
-            customRoleName=${{ env.customRoleName }} 
-            computeGalleryName=${{ env.computeGalleryName }} 
-            networkResourceGroupName=${{ env.networkResourceGroupName }} 
-            currentUser=${{ secrets.AZURE_CREDENTIALS.clientId }} 
-            logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }} 
-            managementResourceGroupName=${{ env.managementResourceGroupName }} 
+          parameters: 'devCenterName=${{ env.devCenterName }} networkConnectionName=${{ env.networkConnectionName }} identityName=${{ env.identityName }} customRoleName=${{ env.customRoleName }} computeGalleryName=${{ env.computeGalleryName }} networkResourceGroupName=${{ env.networkResourceGroupName }} currentUser=${{ secrets.AZURE_CREDENTIALS.clientId }} logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }} managementResourceGroupName=${{ env.managementResourceGroupName }}'
