Adding SetUp script for GitHub Actions

--- a/.github/workflows/depoyDevBox-CI.yaml
+++ b/.github/workflows/depoyDevBox-CI.yaml
@@ -1,4 +1,7 @@
 name: DevBox as a Service Continuous Integration
+
+permissions:
+    id-token: write
 # note
 on:
     workflow_dispatch: # Manually trigger the workflow
