Adding Test Loging Action

--- a/.github/workflows/testLoginToAzure.yaml
+++ b/.github/workflows/testLoginToAzure.yaml
@@ -3,6 +3,9 @@ name: Test Login To Azure
 on: 
     workflow_dispatch: # Manually trigger the workflow
 
+permissions:
+    id-token: write
+
 jobs:
   testLoginToAzure:
     runs-on: ubuntu-latest
