--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -36,10 +36,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Update Packages
-        run: |
-          sudo apt-get update && \
-          sudo apt-get upgrade -y
+      # - name: Update Packages
+      #   run: |
+      #     sudo apt-get update && \
+      #     sudo apt-get upgrade -y
 
       - name: Checkout repository
         uses: actions/checkout@v3
