--- a/src/customizations/workloads/frontEndEngineer/workload.yaml
+++ b/src/customizations/workloads/frontEndEngineer/workload.yaml
@@ -131,4 +131,14 @@ tasks:
     parameters:
       command: "winget upgrade --all"
       runAsUser: true
+  - name: git-clone
+    description: "Clone the eShopRepository repository"
+    parameters:
+      repository: "https://github.com/Evilazaro/eShop"
+      branch: "main"
+  - name: git-clone
+    description: "Clone the DevBox repository"
+    parameters:
+      repository: "https://github.com/Evilazaro/MicrosoftDevBox"
+      branch: "main"
   
