--- a/src/customizations/workloads/backEndEngineer/workload.yaml
+++ b/src/customizations/workloads/backEndEngineer/workload.yaml
@@ -164,3 +164,8 @@ tasks:
     parameters:
       repository: "https://github.com/Evilazaro/MicrosoftDevBox"
       branch: "main"
+  - name: git-clone
+    description: "Clone the Contoso Traders repository"
+    parameters:
+      repository: "https://github.com/Evilazaro/ContosoTraders.git"
+      branch: "main"
