--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -66,7 +66,7 @@ jobs:
           resourceGroupName:  ${{ env.managementResourceGroupName }}
           template: ./src/deploy/bicep/management/deploy.bicep
           parameters: |
-            solutionName=${{ env.solutionName }}
+            'solutionName=${{ env.solutionName }}'
             
       - name: Deploy Network Connectivity Resources
         uses: azure/arm-deploy@v1
