--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -9,10 +9,9 @@ on:
 
 env:
   # Azure Resource Group Names Constants
-solutionName: 'eShopPetDevBox'
-devBoxResourceGroupName: '${{ env.solutionName }}-rg'
-networkResourceGroupName: '${{ env.solutionName }}-Network-rg'
-managementResourceGroupName: '${{ env.solutionName }}-Management-rg'
+devBoxResourceGroupName: "eShopPetDevBox-rg"
+networkResourceGroupName: "eShopPetDevBox-Network-rg"
+managementResourceGroupName: "eShopPetDevBox-Management-rg"
 
 jobs:
   Build-And-Deploy-DevBox-As-A-Service-For-eShop:
